force-app/main/default/objects/Opportunity/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>The level of approver required for this discount</description>
    <label>Approval Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>