force-app/main/default/objects/Opportunity/fields/Discount_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Status__c</fullName>
    <description>Current status of the discount approval</description>
    <label>Discount Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>