force-app/main/default/objects/Opportunity/fields/Max_Allowed_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Allowed_Discount__c</fullName>
    <description>Maximum discount percentage allowed without approval based on opportunity amount</description>
    <label>Max Allowed Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>